--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 blinker==1.4
+certifi==2018.4.16
 click==6.7
 Flask==0.12.2
 Flask-Mail==0.9.1
 Flask-Redis==0.3.0
-huey==1.10.1
+gunicorn==19.9.0
+huey==1.3.1
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
-redis==2.10.6
+redis==2.10.5
 Werkzeug==0.14.1
+wincertstore==0.2
